pkg/front_end/testcases/regress/issue_29984.dart.strong.expect
// Formatted problems:
//
// pkg/front_end/testcases/regress/issue_29984.dart:6:16: Error: Getter not found: 'i'.
//   for (int i = i;; false) {}
//                ^
//
// pkg/front_end/testcases/regress/issue_29984.dart:6:12: Error: Can't declare 'i' because it was already used in this scope.
//   for (int i = i;; false) {}
//            ^
// pkg/front_end/testcases/regress/issue_29984.dart:6:16: Context: Previous use of 'i'.
//   for (int i = i;; false) {}
//                ^

library;
import self as self;
import "dart:core" as core;

static method bad() → dynamic {
  for (core::int i = (let final dynamic #t1 = let dynamic _ = null in invalid-expression "pkg/front_end/testcases/regress/issue_29984.dart:6:12: Error: Can't declare 'i' because it was already used in this scope.
  for (int i = i;; false) {}
           ^" in let final dynamic #t2 = let dynamic _ = null in invalid-expression "pkg/front_end/testcases/regress/issue_29984.dart:6:16: Error: Getter not found: 'i'.
  for (int i = i;; false) {}
               ^" in null) as{TypeError} core::int; ; false) {
  }
}
static method main() → dynamic {}
